# ruff-explain

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/ruff_explain/: __init__.py  cli.py  errors.py  render.py  rules.py
src/ruff_explain/rule_data/: __init__.py  a.json  b.json  c.json  d.json  e.json  f.json  g.json  i.json  l.json  n.json  p.json  q.json  r.json  s.json  t.json  u.json  w.json  y.json
tests/: smoke_test.py  test_cli.py  test_errors.py  test_render.py  test_rules.py
