[project]
name = "ruff-explain"
version = "1.0.1"
description = "Render Ruff rule docs in the terminal or open them in a browser"
readme = "README.md"
authors = [
    { name = "Jakob Guldberg Aaes", email = "jakob1379@gmali.com" }
]
requires-python = ">=3.14"
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/jakob1379/ruff-explain"
Repository = "https://github.com/jakob1379/ruff-explain"
Issues = "https://github.com/jakob1379/ruff-explain/issues"
Changelog = "https://github.com/jakob1379/ruff-explain/releases"

[project.scripts]
ruff-explain = "ruff_explain:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.skylos.overrides."src/ruff_explain/render.py"]
whitelist = [
    "_DomParser.handle_starttag",
    "_DomParser.handle_endtag",
    "_DomParser.handle_startendtag",
    "_DomParser.handle_data",
    "handle_starttag",
    "handle_endtag",
    "handle_startendtag",
    "handle_data",
    "fetch_rule_page",
    "build_rule_renderable",
    "parse_rule_page",
    "_validate_rule_url",
    "_extract_title",
    "_extract_sections",
    "_extract_block",
    "_iter_article_nodes",
    "_heading_from_article_node",
    "_should_skip_article_node",
    "_paragraph_block",
    "_list_block",
    "_is_code_node",
    "_code_block",
    "_extract_code",
    "_render_header_panel",
    "_render_section",
    "_render_example_section",
    "_first_child",
    "_has_class",
    "_contains_tag",
]
